
	* NodeSet.py: Multidimensional nodeset support.  Added support of
	RangeSetND to NodeSet. Optimized NodeSet so that 1D NodeSet objects are
	still using RangeSet (ticket #92). Also benefiting from RangeSetND
	optimization when only one dimension is varying. Patch by
	aurelien.degremont@cea.fr and stephane.thiell@cea.fr.

2014-01-14 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Define module API to access and set group resolver used for
	@-prefixed (eg. '@group') resolution. This is used to circumvent accessing
	and setting NodeSet module's variable 'RESOLVER_STD_GROUP' directly, which
	is not convenient and error prone. The new functions are
	std_group_resolver() and set_std_group_resolver(). Updated User Guide.

	* CLI/Clush.py: ignore IOError on stdin reader thread, but print a warning
	in verbose or debug mode (ticket #201).

2014-01-06 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Fix internal implementation of NodeSet.contiguous(), that
	is, as NodeSet is mutable, we should avoid using the same NodeSet instance
	in NodeSet.contiguous() for different NodeSet values.

2013-12-17 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: fix task.iter_buffers() and worker.iter_buffers() to allow
	optional argument match_keys to be an empty list for convenience. It
	should be set to None to disable match_keys check. Also check that
	match_keys is a true key/node sequence and not a string.

2013-11-05 S. Thiell <stephane.thiell@cea.fr>

	* EngineClient.py: Hide unwanted debug messages: when aborting a task,
	cleanup of associated resources may lead to dropped inter-task messages
	through the EnginePort mechanism. We now only display associated warning
	messages when debugging is enabled...

	* Task.py: Fix abort() race condition.

	* CLI/Clush.py: Fix a defect to allow the use of command timeout when
	copying files (with clush -u delay -c ..., ticket #220).

2013-11-04 A. Degremont <aurelien.degremont@cea.fr>
